# COMP_3270

./: CMakeLists.txt  READEME.txt  input.txt  main.cpp  makefile  plagerism.txt  strategy-1.md  strategy-2.md  strategy-3.md
documents/: READEME.txt  graphs.numbers  readme.pages  strategy-2.md
info/: pseudocode.txt  strategies.md
src/: AbstractHeader.cpp  AbstractHeader.h  AbstractStrategy.cpp  AbstractStrategy.h  ArgParser.cpp  ArgParser.h  FileHandler.cpp  FileHandler.h  Logger.cpp  Logger.h  StrategyTester.cpp  StrategyTester.h  ValueGenerator.cpp  ValueGenerator.h  err_codes.cpp  err_codes.h
src/strat_1/: Strat1.cpp  Strat1.h
src/strat_2/: Strat2.cpp  Strat2.h
src/strat_3/: Strat3.cpp  Strat3.h
